Reverted automatic POJO testing